k8s/service.yaml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  type: NodePort
  selector:
    app: task-service
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30000
